# equipiq

./: .env.example  .gitignore  AIGACP_INTEGRATION.md  CLAUDE.md  Dockerfile  docker-compose.yml  handoff.md  progress.md  railway.toml
fix-core/: .gitignore  pyproject.toml
fix-core/fix_core/: __init__.py
fix-core/fix_core/engine/: __init__.py  context_heavy.py  diagnostic_engine.py  hypothesis_scorer.py
fix-core/fix_core/fleet/: __init__.py  risk_model.py
fix-core/fix_core/interfaces/: __init__.py  event_emitter.py  llm_provider.py  session_repository.py  storage_provider.py
fix-core/fix_core/models/: __init__.py  context.py  evidence.py  fleet.py  hypothesis.py  llm.py  result.py  safety.py  session.py  vehicle.py
fix-core/fix_core/orchestrator/: __init__.py  contradictions.py  discriminator.py  evidence.py  exit_guard.py  safety.py  tree_router.py
fix-core/fix_core/telematics/: __init__.py  ingestor.py
fix-core/fix_core/trees/: __init__.py  brakes.py  brakes_atv.py  brakes_rv.py  brakes_truck.py  check_engine_light_motorcycle.py  coolant_leak_heavy_equipment.py  crank_no_start.py  crank_no_start_generator.py  crank_no_start_motorcycle.py  crank_no_start_pwc.py  electrical_fault_heavy_equipment.py  hvac_rv.py  hydraulic_loss_excavator.py  hydraulic_loss_loader.py  hydraulic_loss_tractor.py  loss_of_power.py  loss_of_power_atv.py  loss_of_power_boat.py  loss_of_power_heavy_equipment.py  loss_of_power_motorcycle.py  no_crank_atv.py  no_crank_boat.py  (+25 more)
fix-core/tests/: test_engine.py  test_fleet_and_telematics.py  test_m3_validation.py  test_orchestrator.py
(+149 files in other folders)
